// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventMedia component renders correctly for media items with video 1`] = `
<View
  style={
    Object {
      "height": 2250,
      "width": 750,
    }
  }
>
  <Image
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 2250,
          "width": 750,
        },
        undefined,
      ]
    }
    testID={undefined}
  />
  <EventVideo
    eventId={undefined}
    height={300}
    videoUrl="someurl"
    width={100}
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 750,
        "zIndex": 2,
      }
    }
  />
</View>
`;

exports[`EventMedia component renders correctly for squared images 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": 750,
      "width": 750,
    }
  }
>
  <Image
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 750,
          "width": 750,
        },
        undefined,
      ]
    }
    testID={undefined}
  />
  <EventVideo
    eventId={undefined}
    height={300}
    videoUrl={undefined}
    width={300}
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 750,
        "zIndex": 2,
      }
    }
  />
</View>
`;

exports[`EventMedia component renders correctly for squared images 2`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "height": 750,
      "width": 750,
    }
  }
>
  <Image
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    source={
      Object {
        "uri": "someurl",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 750,
          "width": 750,
        },
        undefined,
      ]
    }
    testID={undefined}
  />
  <EventVideo
    eventId={undefined}
    height={300}
    videoUrl={undefined}
    width={300}
  />
  <BVLinearGradient
    colors={
      Array [
        3003121664,
        0,
      ]
    }
    end={undefined}
    locations={null}
    start={undefined}
    style={
      Object {
        "height": 130,
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 750,
        "zIndex": 2,
      }
    }
  />
</View>
`;
